# APEX

./: .gitignore  AGENTS.md  README.md  README_CN.md  requirements.txt
APEX_CAS/: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt
APEX_CAS/apex_cas/: CAS_builder.py  CAS_builder_computing.py  CAS_builder_noncomputing.py  CAS_quality.py  CAS_tester.py  FCIDUMP_generator.py  __init__.py  __main__.py  _paths.py  ao_shell_analysis.py  computation_defaults.py  main.py  models.py  orbital_optimizer.py  orbital_visualizer.py  prepare.py  selection_io.py  state_io.py  structure_analyzer.py
APEX_CAS/tests/: test_CAS_quality.py  test_active_space_builder.py  test_apex_cas_fe2s2_example_contract.py  test_apex_cas_module_public_surface.py  test_audit_fe2s2_parameter_authority_script.py  test_cas_builder_entrypoints.py  test_cas_settings_template_contract.py  test_chem_knowledge_helpers.py  test_compare_artifacts_script.py  test_compare_fe2s2_runs_script.py  test_computation_settings.py  test_computed_builder_entrypoints.py  test_main_helpers.py  test_noninteractive_runtime_surface.py  test_orbital_optimizer.py  test_orbital_visualizer_contract.py  test_parameter_input_surface_audit_script.py  test_phase2_cli_commands.py  test_prepare.py  test_shared_comparison.py  test_shared_public_surface.py  test_shared_support_public_surface.py  test_stage1_methods.py  test_staged_cli_commands.py  test_state_and_selection_io.py  test_structure_analyzer.py  test_structure_parser_authority.py
APEX_Filter/: README.md  README_CN.md  pyproject.toml  requirements.txt
(+190 files in other folders)
