[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "apex-filter"
version = "0.1.0"
description = "Electronic Structure Filtering Pipeline for Transition Metal Clusters"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "ase>=3.22",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "apex-cas>=0.1.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.30"]
dev = ["pytest>=7.0", "pytest-cov"]
pyscf = ["pyscf>=2.4"]

[project.scripts]
apex-filter = "apex_filter.main:main"

[tool.setuptools.packages.find]
include = ["apex_filter*"]
